# cv-explorations

./: .gitignore  .nojekyll  README.md  _quarto.yml  cross-platform.html  cross-platform.qmd  foundations.html  foundations.qmd  glossary.html  glossary.qmd  index.html  index.qmd  models.html  models.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
assets/: README.md
ci/: README.md  github-pages.yml
cvkit/: __init__.py  data.py  devices.py  io.py  metrics.py  report.py  timing.py  viz.py
modules/01-object-detection/: README.md  detect.py  explore.html  explore.ipynb  openvocab.py  report.html  report.qmd  run.py
modules/01-object-detection/results/: metrics.html  metrics.json  metrics.md
modules/02-classification/: README.md  classify.py  explore.html  explore.ipynb  report.html  report.qmd  run.py
modules/02-classification/results/: metrics.html  metrics.json  metrics.md
modules/03-segmentation/: README.md  report.html  report.qmd  run.py  segment.py
modules/03-segmentation/results/: metrics.html  metrics.json  metrics.md
modules/04-depth/: README.md  depth.py  report.html  report.qmd  run.py
modules/04-depth/results/: metrics.html  metrics.json  metrics.md
modules/05-pose/: README.md  pose.py  report.html  report.qmd  run.py
modules/05-pose/results/: metrics.html  metrics.json  metrics.md
modules/06-tracking/: README.md  report.html  report.qmd  run.py
modules/06-tracking/results/: metrics.html  metrics.json  metrics.md
modules/07-retrieval/: README.md  embed.py  report.html  report.qmd  run.py
modules/07-retrieval/results/: metrics.html  metrics.json  metrics.md
modules/08-vlm/: README.md  report.html  report.qmd  run.py  vlm.py
modules/08-vlm/results/: metrics.html  metrics.json  metrics.md  transcript.html  transcript.md
modules/09-classical/: README.md  report.html  report.qmd  run.py
modules/09-classical/results/: metrics.html  metrics.json  metrics.md
modules/10-finetuning/: README.md  finetune.py  prepare_data.py  report.html  report.qmd
modules/10-finetuning/results/: metrics.html  metrics.md  (+1 more)
scripts/: fetch_data.py  setup_env.ps1  smoke_gpu.py
tests/: test_smoke.py
