[project]
name = "cv-explorations"
version = "0.1.0"
description = "A learning-and-benchmark tour of modern computer-vision capabilities, one runnable + explained module at a time."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "chaoticcuriosity" }]

# Shared core stack used by cvkit and most modules.
# Per-task heavyweights (ultralytics, rf-detr, fiftyone) live in dependency-groups
# so the base `uv sync` stays lean and low-risk.
dependencies = [
    "torch>=2.8",
    "torchvision",
    "numpy>=2.0",
    "pillow>=10.4",
    "opencv-python>=4.10",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "rich>=13.9",
    "typer>=0.12",
    "supervision>=0.26",
    "transformers>=5.0",
    "timm>=1.0",
    "open-clip-torch>=3.0",
    "torchmetrics>=1.6",
    "pycocotools>=2.0.11",
    "faster-coco-eval>=1.7",
    "huggingface-hub>=0.27",
]

[project.urls]
Homepage = "https://github.com/chaoticcuriosity-io/cv-explorations"

# ---------------------------------------------------------------------------
# uv: pin PyTorch to the CUDA 12.8 wheel index for the RTX 3090 Ti (Ampere).
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

# ---------------------------------------------------------------------------
# Optional groups — install on demand, e.g. `uv sync --group detection`.
# ---------------------------------------------------------------------------
[dependency-groups]
dev = ["pytest>=8.3", "ipykernel>=6.29", "jupyterlab>=4.2"]
data = ["fiftyone>=1.1"]                       # dataset cockpit (heavy; bundles MongoDB)
detection = ["ultralytics>=8.4", "rfdetr>=1.0"] # AGPL (YOLO) + Apache (RF-DETR)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
